--- a/style.css
+++ b/style.css
@@ -39,16 +39,19 @@
 
     .html{
         font-weight: 800;
-        margin-top: 15px;
+        margin-top: 20px;
         font-size: 23px;
     }
 
     .publish{
-        margin-top: 15px;
+        margin-top: 20px;
     }
 
     .language{
-        margin-top: 15px;
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+        margin-top: 20px;
     }
 
     .illustration-carte img{
@@ -56,7 +59,7 @@
     }
 
     .photo-avatar{
-        margin-top: 15px;
+        margin-top: 30px;
         display: flex;
         flex-direction: row;
         align-items: center;
